--- a/custom_components/polaris/translations/en.json
+++ b/custom_components/polaris/translations/en.json
@@ -46,6 +46,12 @@
       },
       "ultraviolet_switch": {
         "name": "Ultraviolet"
+      },
+      "smart_mode": {
+        "name": "Smart"
+      },
+      "bss_mode": {
+        "name": "BSS"
       }
     },
     "water_heater": {
@@ -57,6 +63,16 @@
           "electric": "Warm up",
           "heat_pump": "Warm up with keep",
           "eco": "IQ boiling"
+        }
+      },
+      "water_boiler": {
+        "name": "Boiler",
+        "state": {
+          "off": "Off",
+          "performance": "Low",
+          "electric": "Mid",
+          "heat_pump": "Turbo",
+          "eco": "Eco"
         }
       }
     },
@@ -170,6 +186,9 @@
       },
       "clean_retain": {
         "name": "Clean retain"
+      },
+      "anode_retain": {
+        "name": "Anode retain"
       },
       "mode_sensor": {
         "name": "Mode",
