--- a/custom_components/polaris/translations/en.json
+++ b/custom_components/polaris/translations/en.json
@@ -444,7 +444,7 @@
       }
     }
   },
-  "device_types": {
+  "common": {
     "All": "All",
     "air-cleaner": "Air cleaner",
     "blender": "Blender",
