--- a/custom_components/polaris/translations/ru.json
+++ b/custom_components/polaris/translations/ru.json
@@ -444,7 +444,7 @@
       }
     }
   },
-  "device_types": {
+  "common": {
     "All": "Выберите тип устройства",
     "air-cleaner": "Очиститель воздуха",
     "blender": "Блендер",
