--- a/custom_components/polaris/translations/en.json
+++ b/custom_components/polaris/translations/en.json
@@ -445,7 +445,7 @@
     }
   },
   "common": {
-    "All": "All",
+    "All": "All devices",
     "air-cleaner": "Air cleaner",
     "blender": "Blender",
     "boiler": "Boiler",
