--- a/custom_components/polaris/translations/ru.json
+++ b/custom_components/polaris/translations/ru.json
@@ -445,7 +445,7 @@
     }
   },
   "common": {
-    "All": "Выберите тип устройства",
+    "all": "Выберите тип устройства",
     "air-cleaner": "Очиститель воздуха",
     "blender": "Блендер",
     "boiler": "Бойлер",
