--- a/custom_components/polaris/translations/ru.json
+++ b/custom_components/polaris/translations/ru.json
@@ -446,7 +446,7 @@
   },
   "common": {
     "all": "Выберите тип устройства",
-    "air-cleaner": "Очиститель воздуха",
+    "air_cleaner": "Очиститель воздуха",
     "blender": "Блендер",
     "boiler": "Бойлер",
     "cleaner": "Робот пылесос",
