--- a/custom_components/polaris/translations/en.json
+++ b/custom_components/polaris/translations/en.json
@@ -69,6 +69,36 @@
       },
       "damper_switch": {
         "name": "Recycling"
+      },
+      "damper_heater": {
+        "name": "Detecting open window"
+      },
+      "display_off_heater": {
+        "name": "Auto off display"
+      },
+      "half_power_heater": {
+        "name": "Half power"
+      },
+      "backlight_bright": {
+        "name": "Bright 50/100"
+      },
+      "turbo_switch": {
+        "name": "Turbo mode"
+      },
+      "night_switch": {
+        "name": "Night mode"
+      },
+      "self_cleaning": {
+        "name": "Self cleaning"
+      },
+      "delicate_blowing": {
+        "name": "Delicate blowing"
+      },
+      "eco_mode_switch": {
+        "name": "Eco mode"
+      },
+      "auto_heater_switch": {
+        "name": "Auto heating"
       }
     },
     "water_heater": {
@@ -146,6 +176,12 @@
       },
       "speed_irrigator": {
         "name": "Speed irrigator"
+      },
+      "temperature_difference_eco": {
+        "name": "Temperature difference eco"
+      },
+      "temperature_difference_antifrost": {
+        "name": "Temperature difference antifrost"
       }
     },
     "sensor": {
@@ -255,6 +291,12 @@
           "turns_on": "Turns on",
           "turns_off": "Turns off"
         }
+      },
+      "сurrent_power": {
+        "name": "Current power"
+      },
+      "outdoor_unit_temperature": {
+        "name": "Temperature outdoor unit"
       }
     },
     "select": {
@@ -339,6 +381,38 @@
           "preset1": "Mode 1",
           "preset2": "Mode 2",
           "preset3": "Mode 3"
+        }
+      },
+      "select_night_backlight": {
+        "name": "Night backlight",
+        "state": {
+          "off": "Off",
+          "all_on": "All on",
+          "high_on": "Hight on",
+          "mid_on": "Mid on",
+          "low_on": "Low on"
+        }
+      },
+      "select_swing_horizontal": {
+        "name": "Swing horizontal",
+        "state": {
+          "off": "Swing",
+          "top": "Top",
+          "high": "High",
+          "middle": "Middle",
+          "low": "Low",
+          "bottom": "Bottom"
+        }
+      },
+      "select_swing_vertical": {
+        "name": "Swing vertical",
+        "state": {
+          "off": "Swing",
+          "left": "Left",
+          "center-left": "Center-left",
+          "center": "Center",
+          "center-right": "Center-right",
+          "right": "Right"
         }
       }
     },
@@ -443,6 +517,14 @@
           }
         }
       },
+      "heater": {
+        "name": "Heater",
+        "state_attributes": {
+          "fan_mode": {
+            "name": "Heating power"
+          }
+        }
+      },
       "aircleaner": {
         "name": "Air cleaner",
         "state": {
@@ -454,6 +536,22 @@
               "hands": "Hands",
               "auto": "Auto",
               "night": "Night"
+            }
+          },
+          "fan_mode": {
+            "state": {
+              "top": "Turbo"
+            }
+          }
+        }
+      },
+      "conditioner": {
+        "name": "Conditioner",
+        "state_attributes": {
+          "fan_mode": {
+            "state": {
+              "min": "Max",
+              "max": "Min"
             }
           }
         }
@@ -485,6 +583,7 @@
     "other": "Smart Lid",
     "oven": "Oven",
     "steamer": "Steamer",
-    "toothbrush": "Toothbrush"
+    "toothbrush": "Toothbrush",
+    "air-conditioner": "Conditioner"
   }
 }
