--- a/custom_components/polaris/translations/en.json
+++ b/custom_components/polaris/translations/en.json
@@ -584,6 +584,6 @@
     "oven": "Oven",
     "steamer": "Steamer",
     "toothbrush": "Toothbrush",
-    "air-conditioner": "Conditioner"
+    "air_conditioner": "Conditioner"
   }
 }
