--- a/custom_components/polaris/translations/ru.json
+++ b/custom_components/polaris/translations/ru.json
@@ -584,6 +584,6 @@
     "oven": "Духовка",
     "steamer": "Отпариватель",
     "toothbrush": "Зубная щетка",
-    "air-conditioner": "Кондиционер"
+    "air_conditioner": "Кондиционер"
   }
 }
