--- a/custom_components/polaris/translations/en.json
+++ b/custom_components/polaris/translations/en.json
@@ -292,7 +292,7 @@
           "turns_off": "Turns off"
         }
       },
-      "сurrent_power": {
+      "current_power": {
         "name": "Current power"
       },
       "outdoor_unit_temperature": {
