--- a/custom_components/polaris/translations/en.json
+++ b/custom_components/polaris/translations/en.json
@@ -521,7 +521,24 @@
         "name": "Heater",
         "state_attributes": {
           "fan_mode": {
-            "name": "Heating power"
+            "name": "Heating power",
+            "state": {
+              "10_percent": "10 %",
+              "20_percent": "20 %",
+              "30_percent": "30 %",
+              "40_percent": "40 %",
+              "50_percent": "50 %",
+              "60_percent": "60 %",
+              "70_percent": "70 %",
+              "80_percent": "80 %",
+              "90_percent": "90 %",
+              "100_percent": "100 %",
+              "20_5_percent": "20 %",
+              "40_5_percent": "40 %",
+              "60_5_percent": "60 %",
+              "80_5_percent": "80 %",
+              "100_5_percent": "100 %"
+            }
           }
         }
       },
