--- a/custom_components/polaris/translations/en.json
+++ b/custom_components/polaris/translations/en.json
@@ -588,6 +588,11 @@
               "80_5_percent": "80 %",
               "100_5_percent": "100 %"
             }
+          },
+          "preset_mode": {
+            "state": {
+              "hands": "Hands"
+            }
           }
         }
       },
