--- a/custom_components/polaris/translations/ru.json
+++ b/custom_components/polaris/translations/ru.json
@@ -596,6 +596,11 @@
               "80_5_percent": "80 %",
               "100_5_percent": "100 %"
             }
+          },
+          "preset_mode": {
+            "state": {
+              "hands": "Ручной"
+            }
           }
         }
       },
