--- a/custom_components/polaris/translations/en.json
+++ b/custom_components/polaris/translations/en.json
@@ -657,6 +657,7 @@
     "boiler": "Boiler",
     "heater": "Heater",
     "cleaner": "Cleaner",
+	"window_cleaner": "Window cleaner",
     "blender": "Blender",
     "cooktop": "Cooktop",
     "cordless_cleaner": "Cordless cleaner",
