--- a/custom_components/polaris/translations/ru.json
+++ b/custom_components/polaris/translations/ru.json
@@ -114,6 +114,15 @@
       },
       "anti_fingus_switch": {
         "name": "Профилактика грибка"
+      },
+      "wet_dry_switch": {
+        "name": "Влажная и сухая уборка"
+      },
+      "carpet_booster_switch": {
+        "name": "Повышение мощности на ковре"
+      },
+      "carpet_cleaning_switch": {
+        "name": "Уборка на коврах"
       }
     },
     "water_heater": {
@@ -276,7 +285,7 @@
           "check_water_tank": "Проверьте бак с водой",
           "cappuccinator_false": "Капучинатор не установлен",
           "nothing_is_selected": "Не выбран напиток",
-		  "v01_error_1": "Проверьте датчик высоты",
+          "v01_error_1": "Проверьте датчик высоты",
           "v01_error_2": "Проверьте передний бампер",
           "v01_error_4": "Проверьте колёса",
           "v01_error_8": "Проверьте боковые щётки",
